# segment_image

./: .gitignore  README.md  setup.cfg  setup.py  test_k_means.py
examples/: example_of_gvf_snake.py  example_of_kmeans.py
src/segment_image/: __init__.py  gvf_snake.py  k_means.py
src/segment_image/gvf_snake/: gradient_descent_base.py  gvf.py  snake.py
src/segment_image/gvf_snake/utils/: display.py
src/segment_image/gvf_snake_lib/: __init__.py  gradient_descent_base.py  gvf.py  snake.py
src/segment_image/gvf_snake_lib/utils/: display.py
tests/: test_k_means.py
