[metadata]

name = segment_image_test
version = 0.0.12
author = yu.duan
author_email = dy1226130575@163.com
description = A package used to segment an image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MyDuan/segment_image
project_urls =
    Bug Tracker = https://github.com/MyDuan/segment_image/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src